# systemintegration_opgaver

./: .gitignore
01_introduction/: embeddeyoutube.html  paymentiframe.html
02_text_based_data_formats/: beskrivelse.txt  me.csv  me.json  me.txt  me.xml  me.yaml
02_text_based_data_formats/01a_besvarelse/: PythonParser.py  fejl.txt
02_text_based_data_formats/02a_besvarelse/: pyServer.py
02_text_based_data_formats/03a_besvarelse/: package-lock.json  package.json  server.js
03_modules/html_classic/: index.html  index.js  myModule.js
03_modules/html_esmodules/: index.html  (+2 more)
04b_besvarelse/: README.MD  population.sql
08b_besvarelse/: dokumentation.txt
10._databases/02_python_alembic/: alembic.ini  pyproject.toml
10a_besvarelse/: Dump2  beskrivelse.txt
10b_besvarelse/: migration.js  migrationDB.sqlite  package-lock.json  package.json  populate-sqlite.js
11a_besvarelse/: index.html  package-lock.json  package.json  server.js  stepByStep.txt
11b_besvarelse/: app.js  index.html  package-lock.json  package.json
12a_beskrivelse/: instrukser.txt
13_besvarelse/: app.js  package-lock.json  package.json
19_multipart_forms/: index.html
20_base64images/: index.html
21_audio/: index.html
22_mpeg-dash/: app.js  package-lock.json  package.json
25_github_webhooks/02_python/: main.py  pyproject.toml
27_web_scraping_web_crawling/03_python_scrapy_basic/: pyproject.toml
27_web_scraping_web_crawling/03_python_scrapy_basic/wikicrawler/: output.json
27_web_scraping_web_crawling/03_python_scrapy_basic/wikicrawler/wikicrawler/spiders/: WikiPagespider.py
(+87 files in other folders)
