[project]
name = "02-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Kristian Mortensen",email = "kristianbmortensen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
