[project]
name = "03-python-scrapy-basic"
version = "0.1.0"
description = ""
authors = [
    {name = "Kristian Mortensen",email = "kristianbmortensen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
